Couple of fixes after Maggie's review
- Updated layout code for dl lists
- Added back max-width for <section> elements
- Added a top-margin for the videos create element.  This gives it some
  extra padding to separate it from announcement banners.

--- a/scss/application/views/_video_details.scss
+++ b/scss/application/views/_video_details.scss
@@ -39,15 +39,3 @@
     }    
   }
 }
-
-@media (max-width: 768px) {
-  #video_details {
-    dl {
-      dt,
-      dd {
-        width: 100%;
-        margin-right: 0;
-      }
-    }
-  }
-}
