--- a/scss/elements/_lists.scss
+++ b/scss/elements/_lists.scss
@@ -39,18 +39,17 @@ dl {
     dd {margin-right: 10px;}
   }
   &.inline-description {
+    display: flex;
+    flex-wrap: wrap;
+
     dt,
     dd {
       display: inline-block;
       margin: 5px 0;
-      float: left;
-      
+      width: 100%;
     }
-    dt {
-      width: 20%;
-    }
+
     dd {
-      width: 79%;
       &.constrain {
         max-height: 95px;
         overflow: hidden;
@@ -79,6 +78,15 @@ dl {
       }
       img {
         margin-right: 10px;
+      }
+    }
+
+    @include respond-to(tablet, 0) {
+      dt {
+        width: 150px;
+      }
+      dd {
+        width: calc(100% - 150px);
       }
     }
   }
