--- a/scss/views/_videos-create.scss
+++ b/scss/views/_videos-create.scss
@@ -1,4 +1,6 @@
 .videosCreateSwitcher {
+  margin-top: 20px;
+
   @include respond-to(tablet, 0) {
     display: flex;
   }
